--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "openai": "^6.6.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1"
   },
